src/main/java/com/example/wth_app/error/ExternalServiceException.java
package com.example.wth_app.error;

public class ExternalServiceException extends RuntimeException {
    public ExternalServiceException(String message) {
        super(message);
    }
}
